add swagger exitQuiz swagger configuration
